--- a/players/templates/players/player_detail.html
+++ b/players/templates/players/player_detail.html
@@ -44,7 +44,7 @@
       NASCIMENTO:
     </span>
     <span class="text-xs md:text-sm font-medium dark:text-white">
-      {{ player.birthdate }}
+      {{ player.birthdate | format_date_with_age }}
     </span> 
   </div>
 
