--- a/players/templates/players/player_list.html
+++ b/players/templates/players/player_list.html
@@ -2,7 +2,7 @@
 
 <!-- Page title for countries list page -->
 {% block list_page_title %}
-  Estádios | Teams List
+  Jogadores | Teams List
 {% endblock list_page_title %}
 
 {% block list_content %}
@@ -59,6 +59,15 @@
               </th>
               <th
                   scope="col"
+                  class="table_th"
+                >
+                  <a href="{% url 'player_list' %}?field=id_team__name{% if request.GET.order == 'asc' %}&order=desc{% else %}&order=asc{% endif %}">
+                    Time atual
+                    <i class="fa fa-caret-down" aria-hidden="true"></i>
+                  </a>
+              </th>
+              <th
+                  scope="col"
                   class="table_th text-right"
                 >
                   <a href="{% url 'player_list' %}?field=value_market{% if request.GET.order == 'asc' %}&order=desc{% else %}&order=asc{% endif %}">
@@ -73,7 +82,7 @@
             <tr class="border-b-[#a1a1aa30]  border-b-[1px]">
               <td class="table_td flex flex-col justify-left align-center sticky dark:bg-zinc-900 left-0 z-10 pl-3">
                 <img width="52" height="52" src="{{ player.img }}" class="object-cover rounded-full w-[52px] h-[52px] m-auto block" />
-                  <a href="#" class="gap-1 text-center hover:underline">
+                  <a href="{% url "player_detail" pk=player.pk %}" class="gap-1 text-center hover:underline">
                     {{ player.name }}
                   </a>
               </td>
@@ -83,12 +92,18 @@
               </td>
 
               <td class="table_td">
-                  <span class="hover:underline">{{ player.birthdate }}</span>
+                  <span class="hover:underline">{{ player.birthdate | format_date_with_age }}</span>
               </td>
               <td class="table_td">
-                <img src="{{ player.country_flag }}"  title="{{ player.country_name }}" class="inline-block"/>
-                <a href="{% url "country_detail" pk=player.id_country_id %}" class="hover:underline">
+                <a href="{% url "country_detail" pk=player.id_country_id %}" class="hover:underline flex items-center gap-1">
+                  <img src="{{ player.country_flag }}"  title="{{ player.country_name }}" class="inline-block"/>
                   {{ player.country_name }}
+                </a>
+              </td>
+              <td class="table_td">
+                <a href="{% url "team_detail" pk=player.id_team_id %}" class="hover:underline flex items-center gap-1">
+                  <img src="{{ player.id_team.small_img }}" width="20" title="{{ player.id_team.name }}" class="inline-block"/>
+                  {{ player.id_team.name }}
                 </a>
               </td>
               <td class="text-xs md:text-sm lg:text-base font-light px-2 py-4 whitespace-nowrap text-right">
