--- a/players/templates/players/player_list.html
+++ b/players/templates/players/player_list.html
@@ -68,7 +68,7 @@
               </th>
               <th
                   scope="col"
-                  class="table_th text-right"
+                  class="table_th"
                 >
                   <a href="{% url 'player_list' %}?field=value_market{% if request.GET.order == 'asc' %}&order=desc{% else %}&order=asc{% endif %}">
                     Valor de mercado 
