--- a/templates/atomic/organisms/aside.html
+++ b/templates/atomic/organisms/aside.html
@@ -75,7 +75,7 @@
                 </a>
             </li>
             <li class="h-[56px] flex items-center">
-                <a href="{% url 'team_list' %}">
+                <a href="{% url 'team_trophy_list' %}">
                     <div role="status" class="max-w-sm flex items-center justify-center gap-3">
                         <div class="min-w-[50px] flex justify-center dark:text-white text-slate-900 text-[30px] ">
                             {% include 'icons/trophy.html' %}
