--- a/templates/atomic/organisms/datalist_desktop.html
+++ b/templates/atomic/organisms/datalist_desktop.html
@@ -32,19 +32,18 @@
     
 
     <ul class="leagues_datalist_ul datalist_ul">
-
     </ul>
 
     <ul class="teams_datalist_ul datalist_ul">
-
     </ul>
 
     <ul class="players_datalist_ul datalist_ul">
-
     </ul>
 
     <ul class="countries_datalist_ul datalist_ul">
-
+    </ul>
+    
+    <ul class="trophies_datalist_ul datalist_ul">
     </ul>
   </div>
 </label>
