--- a/templates/atomic/organisms/datalist_mobile.html
+++ b/templates/atomic/organisms/datalist_mobile.html
@@ -37,5 +37,8 @@
     <ul class="countries_datalist_ul datalist_ul">
     </ul>
 
+    <ul class="trophies_datalist_ul datalist_ul">
+    </ul>
+
   </div>
 </div>
