--- a/leagues/templates/leagues/league_detail.html
+++ b/leagues/templates/leagues/league_detail.html
@@ -59,10 +59,10 @@
   <div class="max-w-[97vw] py-2 inline-block min-w-full sm:px-6 lg:px-8">
     <div class="team_tables table_wrapper rounded-md">
       <!-- Table for displaying players data -->
-      <div class="overflow-auto px-3"> 
+      <div class="overflow-auto"> 
       <table class="min-w-full rounded-md">
         <thead class="table_thead">
-          <tr>
+          <tr class="table_tr">
             <th
               scope="col"
               class="table_th"
@@ -102,7 +102,7 @@
         </thead>
         <tbody>
           {% for team in related_teams %}
-          <tr class="border-b-[#a1a1aa30]  border-b-[1px]">
+          <tr class="table_tr">
             <td class="table_td">
                 <img width="52" height="52" src="{{ team.small_img }}" class="object-cover rounded-full w-[38px] md:w-[52px] m-auto block" />
             </td>
