--- a/players/templates/players/player_detail.html
+++ b/players/templates/players/player_detail.html
@@ -63,7 +63,7 @@
   <div class="max-w-[97vw] py-2 inline-block min-w-full sm:px-6 lg:px-8">
     <div class="team_tables table_wrapper rounded-md">
       <!-- Table for displaying trophies data -->
-      <div class="overflow-auto px-3">
+      <div class="overflow-auto">
         <p class="text-white">
           EM BREVE MAIS INFORMAÇÕES
         </p>
