--- a/team_trophy/templates/team_trophy/team_trophy_detail.html
+++ b/team_trophy/templates/team_trophy/team_trophy_detail.html
@@ -47,10 +47,10 @@
   <div class="max-w-[97vw] py-2 inline-block min-w-full sm:px-6 lg:px-8">
     <div class="team_tables table_wrapper rounded-md">
       <!-- Table for displaying players data -->
-      <div class="overflow-auto px-3"> 
+      <div class="overflow-auto"> 
         <table class="min-w-full rounded-md">
           <thead class="table_thead">
-            <tr>
+            <tr class="table_tr">
               <th
                 scope="col"
                 class="table_th"
@@ -73,7 +73,7 @@
           </thead>
           <tbody>
             {% for team in related_teams %}
-            <tr class="border-b-[#a1a1aa30]  border-b-[1px]">
+            <tr class="table_tr">
               <td class="table_td">
                   <img height="52" src="{{ team.id_team.small_img }}" class="object-cover w-[38px] md:w-[52px] block" />
               </td>
