--- a/theme/static_src/src/styles.css
+++ b/theme/static_src/src/styles.css
@@ -11,66 +11,65 @@
 @layer components {
   .detail_card {
     @apply 
-        bg-zinc-900
-        backdrop-filter
-        backdrop-blur-md
-        px-2 
-        forced-colors:outline 
-        py-1
-        flex
-        rounded-sm
-        gap-2 
-        items-center
-        justify-between
-        before:rounded-sm
-        shadow-[0px_0px_0px_1px_rgba(255,255,255,0.1)]
-        before:pointer-events-none
-        before:absolute
+      bg-zinc-900
+      backdrop-filter
+      backdrop-blur-md
+      px-2 
+      forced-colors:outline 
+      py-1
+      flex
+      rounded-sm
+      gap-2 
+      items-center
+      justify-between
+      before:rounded-sm
+      shadow-[0px_0px_0px_1px_rgba(255,255,255,0.1)]
+      before:pointer-events-none
+      before:absolute
   }
 
   .card {
     @apply 
-        p-3 
-        bg-zinc-900
-        forced-colors:outline
-        rounded-lg   
-        before:rounded-xl 
-        shadow-[0px_0px_0px_1px_rgba(255,255,255,0.1)]
-        before:pointer-events-none
-        before:absolute
+      p-3 
+      bg-zinc-900
+      forced-colors:outline
+      rounded-lg   
+      before:rounded-xl 
+      shadow-[0px_0px_0px_1px_rgba(255,255,255,0.1)]
+      before:pointer-events-none
+      before:absolute
   }
 
   .table_wrapper {
     @apply 
-        overflow-hidden   
-        relative 
-        z-10 
-        rounded-md 
-        px-3
-        rounded-tl-[0px]  
-        bg-zinc-900       
-        before:rounded-xl 
-        shadow-[0px_0px_0px_1px_rgba(255,255,255,0.1)]
-        before:pointer-events-none
-        before:absolute
-        before:rounded-tl-xl 
+      overflow-hidden   
+      relative 
+      z-10 
+      rounded-md 
+      rounded-tl-[0px]  
+      bg-zinc-900       
+      before:rounded-xl 
+      shadow-[0px_0px_0px_1px_rgba(255,255,255,0.1)]
+      before:pointer-events-none
+      before:absolute
+      before:rounded-tl-xl 
   }
 
   .table_thead {
     @apply 
-        border-b-[#a1a1aa30]
-        border-b-[1px]
+      border-b-[#a1a1aa30]
+      border-b-[1px]
   }
 
   .table_th {
     @apply 
       text-[#A1A1AA]
-          text-xs
-          md:text-sm
-          text-left
-          px-2
-          py-4
-          last-of-type:text-right
+      text-xs
+      md:text-sm
+      text-left
+      px-2
+      py-4
+      last-of-type:text-right
   }
 
   .table_td {
@@ -85,24 +84,34 @@
       last-of-type:text-right
   }
 
+  
+  .table_tr{
+    @apply
+      border-b-[#a1a1aa30]
+      border-b-[1px]
+      last-of-type:border-0
+      hover:bg-[#3e1253]
+      transition-all
+  }
+
   .mini_table_th {
     @apply 
       text-[#A1A1AA]
-        text-xs
-        md:text-sm
-        text-left
-        px-2
-        py-4
+      text-xs
+      md:text-sm
+      text-left
+      px-2
+      py-4
   }
 
   .mini_table_td {
     @apply 
-        text-xs
-        font-light
-        px-2
-        py-4
-        whitespace-nowrap
-        text-[#A1A1AA]
+      text-xs
+      font-light
+      px-2
+      py-4
+      whitespace-nowrap
+      text-[#A1A1AA]
   }
 
   .pagination_a{
@@ -131,6 +140,28 @@
     outline-0
     p-0
   }
+
+}
+
+.table_tr:hover .table_td {
+  color: #FFFFFF;
+}
+
+
+table tr > td:first-child {
+  padding-left: 3em;
+}
+
+table tr > td:last-child {
+  padding-right: 3em;
+}
+
+table thead th:first-child {
+  padding-left: 3em;
+}
+
+table thead th:last-child {
+  padding-right: 3em;
 }
 
 .montserrat {
