feat: add colors from img

--- a/templates/atomic/organisms/color_palette.html
+++ b/templates/atomic/organisms/color_palette.html
@@ -1,6 +1,6 @@
 {% if user.is_authenticated and user.is_staff %}
 <div
-  class="hidden colors_palette flex flex-col w-[110px] bg-white p-4 box-content fixed top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 shadow-[0_8px_30px_rgb(0,0,0,0.12)] z-50 rounded-md"
+  class="hidden colors_palette flex-col w-[110px] bg-white p-4 box-content fixed top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 shadow-[0_8px_30px_rgb(0,0,0,0.12)] z-50 rounded-md"
 >
   <span
     class="text-sm absolute right-[2px] top-[2px] cursor-pointer close_open_palette"
