--- a/templates/atomic/organisms/edit_page.html
+++ b/templates/atomic/organisms/edit_page.html
@@ -15,6 +15,9 @@
     {% endif %}
 
     {% if league and not country and not team%}
+        <div title="Editar cores" class="edit_component open_palette fixed cursor-pointer rounded-md right-2 bottom-14 h-10 w-10 border-[1px] border-solid bg-[#06AA48] grid place-items-center text-2xl text-white">
+            {% include 'icons/palette.html' %}
+        </div>
         <a href="/admin/leagues/league/{{league.pk}}/change/" title="Editar liga" target="_BLANK" class="edit_component fixed rounded-md right-2 z-20 bottom-2 h-10 w-10 grid place-items-center text-2xl
         dark:before:rounded-xl 
         dark:shadow-[0px_0px_0px_1px_rgba(255,255,255,0.1)]
@@ -30,6 +33,9 @@
     {% endif %}
 
     {% if team and not league and not country%}
+        <div title="Editar cores" class="edit_component open_palette fixed cursor-pointer rounded-md right-2 bottom-14 h-10 w-10 border-[1px] border-solid bg-[#06AA48] grid place-items-center text-2xl z-20 text-white">
+            {% include 'icons/palette.html' %}
+        </div>
         <a href="/admin/teams/team/{{team.pk}}/change/" title="Editar time" target="_BLANK" class="edit_component fixed rounded-md right-2 z-20 bottom-2 h-10 w-10 grid place-items-center text-2xl
         dark:before:rounded-xl 
         dark:shadow-[0px_0px_0px_1px_rgba(255,255,255,0.1)]
